--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	</footer>
 
 	<div id="copyright">
-		
+		<p>Website by Elizabeth Greenstein, &#169;2015.</p>
 	</div>
 
 <!--END OF FOOTER SECTION-->
