Added HTML for dropdown
Added the HTML for the main nav dropdown menu. Still need to do the CSS

--- a/index.html
+++ b/index.html
@@ -14,16 +14,55 @@
 <!-- HEADER SECTION -->
 
 	<header>
-		<nav id="top">
+	
+		<div id="header-top">
 			<form action="/search">
 				<input type="text" placeholder="Search"/>
 			</form>
-
-		</nav>
-
-		<nav id="bottom">
-			
-		</nav>
+		</div>
+		
+		<div id="header-bottom">
+			<nav>
+				<a href="#" target="_self">HOME</a>
+				<span class="container">
+					<a href="#" target="_self">THEMED COLLECTIONS</a>
+						<ul class="dropdown">
+							<li><a href="#">DESIGNER-INSPIRED WEDDING DRESSES</a></li>
+							<li><a href="#">GOTHIC WEDDING DRESSES</a></li>
+							<li><a href="#">VINTAGE & CELEBRITY INSPIRED WEDDING DRESSES</a></li>
+							<li><a href="#">GYPSY WEDDING DRESSES</a></li>
+							<li><a href="#">TEA LENGTH WEDDING DRESSES</a></li>
+							<li><a href="#">PLUS SIZE WEDDING DRESSES</a></li>
+						</ul>
+				</span>
+						
+				<span class="container">
+					<a href="#" target="_self">COLORFUL WEDDING DRESSES</a>
+						<ul class="dropdown">
+							<li><a href="#">RED</a></li>
+							<li><a href="#">PINK</a></li>
+							<li><a href="#">GOLD / YELLOW / ORANGE</a></li>
+							<li><a href="#">GREEN</a></li>
+							<li><a href="#">BLUE</a></li>
+							<li><a href="#">PURPLE</a></li>
+							<li><a href="#">BLACK</a></li>
+						</ul>
+				</span>
+						
+				<span class="container">
+					<a href="#" target="_self">ABOUT US</a>
+						<ul class="dropdown">
+							<li><a href="#">FAQ'S</a></li>
+							<li><a href="#">MEET THE DESIGNER</a></li>
+							<li><a href="#">EXPERIENCE THE DIFFERENCE</a></li>
+							<li><a href="#">OUR GUARANTEE</a></li>
+							<li><a href="#">TESTIMONIALS</a></li>
+							<li><a href="#">PRESS & MEDIA</a></li>
+						</ul>
+					</span>
+			</nav>
+		</div>
+		
 	</header>
 
 <!-- END OF HEADER SECTION -->
