Added CSS outline for dropdown

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 		<div id="header-bottom">
 			<nav>
 				<a href="#" target="_self">HOME</a>
-				<span class="container">
+				<span class="dropdown-container">
 					<a href="#" target="_self">THEMED COLLECTIONS</a>
 						<ul class="dropdown">
 							<li><a href="#">DESIGNER-INSPIRED WEDDING DRESSES</a></li>
 							<li><a href="#">GOTHIC WEDDING DRESSES</a></li>
-							<li><a href="#">VINTAGE & CELEBRITY INSPIRED WEDDING DRESSES</a></li>
+							<li><a href="#">VINTAGE &#38; CELEBRITY INSPIRED WEDDING DRESSES</a></li>
 							<li><a href="#">GYPSY WEDDING DRESSES</a></li>
 							<li><a href="#">TEA LENGTH WEDDING DRESSES</a></li>
 							<li><a href="#">PLUS SIZE WEDDING DRESSES</a></li>
 						</ul>
 				</span>
 						
-				<span class="container">
+				<span class="dropdown-container">
 					<a href="#" target="_self">COLORFUL WEDDING DRESSES</a>
 						<ul class="dropdown">
 							<li><a href="#">RED</a></li>
@@ -49,50 +49,52 @@
 						</ul>
 				</span>
 						
-				<span class="container">
+				<span class="dropdown-container">
 					<a href="#" target="_self">ABOUT US</a>
 						<ul class="dropdown">
-							<li><a href="#">FAQ'S</a></li>
+							<li><a href="#">FAQ&#39;S</a></li>
 							<li><a href="#">MEET THE DESIGNER</a></li>
 							<li><a href="#">EXPERIENCE THE DIFFERENCE</a></li>
 							<li><a href="#">OUR GUARANTEE</a></li>
-							<li><a href="#">TESTIMONIALS</a></li>
-							<li><a href="#">PRESS & MEDIA</a></li>
+							<li><a href="#">TESTIMONIALS</a></li>s
+							<li><a href="#">PRESS &#38; MEDIA</a></li>
 						</ul>
-					</span>
+				</span>
 			</nav>
 		</div>
-		
+
 	</header>
 
 <!-- END OF HEADER SECTION -->
 
 <!-- CONTENT SECTION -->
-
-	<div id="hero">
-	</div>
-
-	<div id="welcome-blurb">
-		<h1>FIND A GOWN UNLIKE ANY OTHER</h1>
-		<p>At Wedding Dress Fantasy, you can select a Wedding Gown from our own collection and customize it, or have a one-of-a-kind Custom Designed Gown created exclusively for you. From understated elegance to flashy glam, we've made it all happen before, and would love to create a dream gown for you, too.</p>
-	</div>
+	<main>
+		<div id="hero">
+		</div>
+	
+		<div id="welcome-blurb">
+			<h1>FIND A GOWN UNLIKE ANY OTHER</h1>
+			<p>At Wedding Dress Fantasy, you can select a Wedding Gown from our own collection and customize it, or have a one-of-a-kind Custom Designed Gown created exclusively for you. From understated elegance to flashy glam, we've made it all happen before, and would love to create a dream gown for you, too.</p>
+		</div>
 
 <!-- END OF CONTENT SECTION -->
 
 <!-- FEATURES SECTION -->
 
-	<div id="features-block">
+		<div id="features-block">
 
-		<div class="features" id="join-club">
+			<div class="features" id="join-club">
+			</div>
+	
+			<div class="features" id="video">	
+			</div>
+	
+			<div class="features" id="buyers-guide">	
+			</div>
+
 		</div>
 
-		<div class="features" id="video">	
-		</div>
-
-		<div class="features" id="buyers-guide">	
-		</div>
-
-	</div>
+	</main>
 
 <!-- END OF FEATURES SECTION -->
 
