Updated dropdown's CSS
Added preliminary styling to the main nav bar dropdown.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<div id="header-bottom">
 			<nav>
 				<a href="#" target="_self">HOME</a>
+
 				<span class="dropdown-container">
 					<a href="#" target="_self">THEMED COLLECTIONS</a>
 						<ul class="dropdown">
@@ -56,7 +57,7 @@
 							<li><a href="#">MEET THE DESIGNER</a></li>
 							<li><a href="#">EXPERIENCE THE DIFFERENCE</a></li>
 							<li><a href="#">OUR GUARANTEE</a></li>
-							<li><a href="#">TESTIMONIALS</a></li>s
+							<li><a href="#">TESTIMONIALS</a></li>
 							<li><a href="#">PRESS &#38; MEDIA</a></li>
 						</ul>
 				</span>
@@ -81,7 +82,7 @@
 
 <!-- FEATURES SECTION -->
 
-		<div id="features-block">
+		<div id="features-block"> <!-- Maybe call this "<figure>"? Check google. -->
 
 			<div class="features" id="join-club">
 			</div>
@@ -127,18 +128,22 @@
 	
 			<div class="footer-features" id="account">
 				<h2>ACCOUNT INFORMATION</h2>
+				<ul class="footer-list">
 					<li><a href="#" target="_self">Sign In</a></li>
 					<li><a href="#" target="_self">Create Account</a></li>
 					<li><a href="#" target="_self">My Account</a></li>
 					<li><a href="#" target="_self">Lost Password</a></li>
+				</ul>
 			</div>
 	
 			<div class="footer-features" id="buyers-guide-f">
 				<h2>BUYER&#39;S GUIDE</h2>
+				<ul class="footer-list">
 					<li><a href="#" target="_self">Color Guide</a></li>
 					<li><a href="#" target="_self">Sizing Chart</a></li>
 					<li><a href="#" target="_self">Measuring Instructions</a></li>
 					<li><a href="#" target="_self">Bridal Resources</a></li>
+				</ul>
 			</div>
 		</div>
 
