Fixed Main issues with dropdown
Closed gap between dropdown and nav bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet' type='text/css'>
-	
+
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,6 +18,10 @@
 	<header>
 	
 		<div id="header-top">
+			<div id="logo">
+				<img src="Images/WDF-Logo.png"/>
+			</div>
+		
 			<form action="/search">
 				<input type="text" placeholder="Search"/>
 			</form>
@@ -71,8 +75,9 @@
 <!-- END OF HEADER SECTION -->
 
 <!-- CONTENT SECTION -->
-	<main>
+	<div class="main">
 		<div id="hero">
+			<img src="Images/dreamgown2.png"/>
 		</div>
 	
 		<div id="welcome-blurb">
@@ -97,7 +102,7 @@
 
 		</div>
 
-	</main>
+	</div>
 
 <!-- END OF FEATURES SECTION -->
 
