Save before we add js

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 				<span class="dropdown-container">
 					<a href="#" target="_self">THEMED COLLECTIONS</a>
 						<ul class="dropdown">
-							<li><a href="#">DESIGNER-INSPIRED WEDDING DRESSES</a></li>
-							<li><a href="#">GOTHIC WEDDING DRESSES</a></li>
-							<li><a href="#">VINTAGE &#38; CELEBRITY INSPIRED WEDDING DRESSES</a></li>
-							<li><a href="#">GYPSY WEDDING DRESSES</a></li>
-							<li><a href="#">TEA LENGTH WEDDING DRESSES</a></li>
-							<li><a href="#">PLUS SIZE WEDDING DRESSES</a></li>
+							<li><a href="#">DESIGNER-INSPIRED</a></li>
+							<li><a href="#">GOTHIC</a></li>
+							<li><a href="#">VINTAGE &#38; CELEBRITY INSPIRED</a></li>
+							<li><a href="#">GYPSY</a></li>
+							<li><a href="#">TEA LENGTH</a></li>
+							<li><a href="#">PLUS SIZE</a></li>
 						</ul>
 				</span>
 						
@@ -134,7 +134,7 @@
 			</div>
 	
 			<div class="footer-features" id="account">
-				<h2>ACCOUNT INFORMATION</h2>
+				<h2>ACCOUNT</h2>
 				<ul class="footer-list">
 					<li><a href="#" target="_self">Sign In</a></li>
 					<li><a href="#" target="_self">Create Account</a></li>
