Added Flexslider plugin
- Added flex slider carousel plugin (jQuery flexslider file, flexslider
css file)
- Added the “fonts” folder in the css to make sure that the arrows
appeared
- Added a z-index to the .dropdown-container of 100 to make sure the
dropdown menus appeared over the carousel

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <head>
 	<title>Wedding Dress Fantasy</title>
 
+<!-- FONTS -->
 	<link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet' type='text/css'>
 
+<!-- CSS -->
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/flexslider.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css">
+
+<!-- JS/jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/jquery.flexslider-min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
@@ -76,8 +84,22 @@
 
 <!-- CONTENT SECTION -->
 	<div class="main">
-		<div id="hero">
+		<!-- <div id="hero">
 			<img src="Images/dreamgown2.png"/>
+		</div> -->
+
+		<div class="flexslider">
+  			<ul class="slides">
+    			<li>
+     			 <img src="Images/dreamgown2.png" />
+    			</li>
+    			<li>
+    			  <img src="Images/WDF-Logo.png" />
+    			</li>
+    			<!-- <li>
+    			  <img src="slide3.jpg" />
+    			</li> -->
+  			</ul>
 		</div>
 	
 		<div id="welcome-blurb">
