--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
      			 <img src="Images/dreamgown2.png" />
     			</li>
     			<li>
-    			  <img src="Images/WDF-Logo.png" />
+    			  <img src="Images/personality.png" />
     			</li>
     			<!-- <li>
     			  <img src="slide3.jpg" />
