Added upper header with shopping bag
Added sign up, log in, heart, and shopping bag icons.
Also messed around a lot with feature photos, but those are still a
work in progress.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,18 @@
 					<div id="logo">
 						<img src="Images/WDF-Logo.png"/>
 					</div>
-
 				
 					<form action="/search">
 						<input type="text" placeholder="Search"/>
 					</form>
+				</div>
+
+				<div class="upper">
+					<img src="Images/bag.png"/>
+					<div class="heart">
+						<img src="Images/heart.png"/>
+					</div>
+					<p>Sign Up    |    Log In</p>
 				</div>
 			</div>
 			
@@ -121,7 +128,8 @@
 			<div class="features" id="join-club">
 			</div>
 	
-			<div class="features" id="video">	
+			<div class="features" id="video">
+				<img src="Images/real_bride4.png"/>	
 			</div>
 	
 			<div class="features" id="buyers-guide">	
@@ -136,7 +144,7 @@
 <!--FOOTER SECTION-->
 
 	<footer>
-
+		<div class="centered">
 		<div id="ff-container">
 			<div class="footer-features" id="customer-service">
 				<h2>CUSTOMER SERVICE</h2>
@@ -185,11 +193,12 @@
 			<div class="social">
 			</div>
 		</div>
+		</div>
 
 	</footer>
 
 	<div id="copyright">
-		<p>Website by Elizabeth Greenstein, &#169;2015.</p>
+		<p>Website by Elizabeth Greenstein, UX Designer Extraordinaire in training and who would really like you to give her a job. &#169;2015.</p>
 	</div>
 
 <!--END OF FOOTER SECTION-->
