Added new feature photos
Updated background, added social media icons, updated main carousel
photo

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<div class="flexslider">
   			<ul class="slides">
     			<li>
-     			 <img src="Images/dreamgown2.png" />
+     			 <img src="Images/belle.png" />
     			</li>
     			<li>
     			  <img src="Images/personality.png" />
@@ -116,7 +116,7 @@
 	
 		<div id="welcome-blurb">
 			<h1>FIND A GOWN UNLIKE ANY OTHER</h1>
-			<p>At Wedding Dress Fantasy, you can select a Wedding Gown from our own collection and customize it, or have a one-of-a-kind Custom Designed Gown created exclusively for you. From understated elegance to flashy glam, we've made it all happen before, and would love to create a dream gown for you, too.</p>
+			<p>Select a Wedding Gown from our collection and customize it, or have a one-of-a-kind Custom Designed Gown created exclusively for you. </br>From understated elegance to flashy glam, we've made it all happen before. Let us create your dream gown.</p>
 		</div>
 
 <!-- END OF CONTENT SECTION -->
@@ -126,13 +126,15 @@
 		<div id="features-block"> <!-- Maybe call this "<figure>"? Check google. -->
 
 			<div class="features" id="join-club">
+				<img src="Images/club.png"/>
 			</div>
 	
 			<div class="features" id="video">
-				<img src="Images/real_bride4.png"/>	
+				<img src="Images/real.png"/>	
 			</div>
 	
-			<div class="features" id="buyers-guide">	
+			<div class="features" id="buyers-guide">
+				<img src="Images/buyer.png"/>	
 			</div>
 
 		</div>
@@ -191,6 +193,11 @@
 
 		<div id="social-container">
 			<div class="social">
+				<img src="Images/facebook.png"/>
+				<img src="Images/twitter.png"/>
+				<img src="Images/pinterest.png"/>
+				<img src="Images/youtube.png"/>
+				<img src="Images/googleplus.png"/>
 			</div>
 		</div>
 		</div>
