Linked social media and updated carousel images
Made social media links functional and streamlined the style of the
carousel images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div id="header-top">
 				<div class="centered">
 					<div id="logo">
-						<img src="Images/WDF-Logo.png"/>
+						<img src="Images/logo.png"/>
 					</div>
 				
 					<form action="/search">
@@ -108,9 +108,12 @@
     			<li>
     			  <img src="Images/personality.png" />
     			</li>
-    			<!-- <li>
-    			  <img src="slide3.jpg" />
-    			</li> -->
+    			<li>
+    			  <img src="Images/rose.png" />
+    			</li>
+    			<li>
+    			  <img src="Images/say.png" />
+    			</li>
   			</ul>
 		</div>
 	
@@ -130,7 +133,7 @@
 			</div>
 	
 			<div class="features" id="video">
-				<img src="Images/real.png"/>	
+				<img src="Images/real2.png"/>	
 			</div>
 	
 			<div class="features" id="buyers-guide">
@@ -193,11 +196,11 @@
 
 		<div id="social-container">
 			<div class="social">
-				<img src="Images/facebook.png"/>
-				<img src="Images/twitter.png"/>
-				<img src="Images/pinterest.png"/>
-				<img src="Images/youtube.png"/>
-				<img src="Images/googleplus.png"/>
+				<a href="https://www.facebook.com/pages/WeddingDressFantasycom/117323411616967?fref=ts" target="_blank"><img src="Images/facebook.png"/></a>
+				<a href="https://twitter.com/couturedebride" target="_blank"><img src="Images/twitter.png"/></a>
+				<a href="http://www.pinterest.com/tovamarc/" target="_blank"><img src="Images/pinterest.png"/></a>
+				<a href="https://www.youtube.com/user/WeddingDressFantasy" target="_blank"><img src="Images/youtube.png"/></a>
+				<a href="https://plus.google.com/101728917173005484784/posts" target="_blank"><img src="Images/googleplus.png"/></a>
 			</div>
 		</div>
 		</div>
