--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div id="header-top">
 				<div class="centered">
 					<div id="logo">
-						<img src="Images/logo.png"/>
+						<img src="images/logo.png"/>
 					</div>
 				
 					<form action="/search">
@@ -37,9 +37,9 @@
 				</div>
 
 				<div class="upper">
-					<img src="Images/bag.png"/>
+					<img src="images/bag.png"/>
 					<div class="heart">
-						<img src="Images/heart.png"/>
+						<img src="images/heart.png"/>
 					</div>
 					<p>Sign Up    |    Log In</p>
 				</div>
@@ -97,22 +97,22 @@
 <!-- CONTENT SECTION -->
 	<div class="main">
 		<!-- <div id="hero">
-			<img src="Images/dreamgown2.png"/>
+			<img src="images/dreamgown2.png"/>
 		</div> -->
 
 		<div class="flexslider">
   			<ul class="slides">
     			<li>
-     			 <img src="Images/belle.png" />
+     			 <img src="images/belle.png" />
     			</li>
     			<li>
-    			  <img src="Images/personality.png" />
+    			  <img src="images/personality.png" />
     			</li>
     			<li>
-    			  <img src="Images/rose.png" />
+    			  <img src="images/rose.png" />
     			</li>
     			<li>
-    			  <img src="Images/say.png" />
+    			  <img src="images/say.png" />
     			</li>
   			</ul>
 		</div>
@@ -129,15 +129,15 @@
 		<div id="features-block"> <!-- Maybe call this "<figure>"? Check google. -->
 
 			<div class="features" id="join-club">
-				<img src="Images/club.png"/>
+				<img src="images/club.png"/>
 			</div>
 	
 			<div class="features" id="video">
-				<img src="Images/real2.png"/>	
+				<img src="images/real2.png"/>	
 			</div>
 	
 			<div class="features" id="buyers-guide">
-				<img src="Images/buyer.png"/>	
+				<img src="images/buyer.png"/>	
 			</div>
 
 		</div>
@@ -196,11 +196,11 @@
 
 		<div id="social-container">
 			<div class="social">
-				<a href="https://www.facebook.com/pages/WeddingDressFantasycom/117323411616967?fref=ts" target="_blank"><img src="Images/facebook.png"/></a>
-				<a href="https://twitter.com/couturedebride" target="_blank"><img src="Images/twitter.png"/></a>
-				<a href="http://www.pinterest.com/tovamarc/" target="_blank"><img src="Images/pinterest.png"/></a>
-				<a href="https://www.youtube.com/user/WeddingDressFantasy" target="_blank"><img src="Images/youtube.png"/></a>
-				<a href="https://plus.google.com/101728917173005484784/posts" target="_blank"><img src="Images/googleplus.png"/></a>
+				<a href="https://www.facebook.com/pages/WeddingDressFantasycom/117323411616967?fref=ts" target="_blank"><img src="images/facebook.png"/></a>
+				<a href="https://twitter.com/couturedebride" target="_blank"><img src="images/twitter.png"/></a>
+				<a href="http://www.pinterest.com/tovamarc/" target="_blank"><img src="images/pinterest.png"/></a>
+				<a href="https://www.youtube.com/user/WeddingDressFantasy" target="_blank"><img src="images/youtube.png"/></a>
+				<a href="https://plus.google.com/101728917173005484784/posts" target="_blank"><img src="images/googleplus.png"/></a>
 			</div>
 		</div>
 		</div>
