hid call to action
commented it out until I can format it

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   			<ul class="slides">
     			<li>
      			 <img src="images/belle.png" />
-     			 <div class="call-to-action"><p>CLICK HERE YO</p></div>
+     			 <!-- <div class="call-to-action"><p>CLICK HERE YO</p></div> -->
     			</li>
     			<li>
     			  <img src="images/personality.png" />
