Updated test images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
 								<li><a href="#">BLACK</a></li>
 							</ul>
 					</span>
-							
+					
+					<!-- <span class="dropdown-container">
+					<!-- <ef="#">CUSTOMIZE YOUR DRESS</a> -->
+				<!-- 	</span> -->
+
 					<span class="dropdown-container">
 						<a href="#" target="_self">ABOUT US</a>
 							<ul class="dropdown">
@@ -129,7 +133,7 @@
 			<!-- for accessibility, avoid text in images -->
 			<div class="features" id="join-club">
 				<img src="images/club.png"/>
-				<p>TEST</p>
+				<!-- <p>TEST</p> -->
 			</div>
 	
 			<div class="features" id="video">
